# Parallel_Computing_Python

./: .gitignore  README.md  pyproject.toml
joins/: concurrent_file_search.py  concurrent_file_search_thread.py  join_simple_example.py
letter_frequencies/: letter_counter_multithread.py  letter_counter_mutex.py  letter_counter_single_thread.py
synchronization/: stingy_spendy.py
threads_processes/: creating_processes.py  creating_threads.py
