[project]
name = "parallel-computing-python-course"
version = "0.1.0"
description = "Udemy course: Learn Parrarel Computing in Python"
authors = [
    {name = "Sebastian",email = "sebas.morera999@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
